[metadata]
name = libpy64pixels-hatkidchan
version = 0.0.1
author = hatkidchan
author_email = hatkidchan@gmail.com
description = Python library for 64pixels game
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hatkidchan/libpy64pixels
classifiers = 
    Programming Language :: Python :: 3
    License :: MIT License
    Operating System :: OS Independent
    
[options]
packages = find:
python_requires = >=3.6
